--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,11 @@
 		<artifactId>jackson-databind</artifactId>
 		<version>2.6.3</version>
 	</dependency>
+	
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
     </dependencies>
 </project>
