--- a/pom.xml
+++ b/pom.xml
@@ -59,13 +59,38 @@
 			<artifactId>log4j-api</artifactId>
 			<version>2.7</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>2.7</version>
 		</dependency>
-	</dependencies>
+		
+		
+
+  
+  <!-- https://mvnrepository.com/artifact/org.apache.jena/jena-arq -->
+<dependency>
+    <groupId>org.apache.jena</groupId>
+    <artifactId>jena-arq</artifactId>
+    <version>3.1.1</version>
+</dependency>
+
+<dependency>
+        <groupId>org.aksw.jena-sparql-api</groupId>
+        <artifactId>jena-sparql-api-core</artifactId>
+        <version>3.0.1-1</version>
+    </dependency> 
+    
+    <dependency>
+    <groupId>com.hp.hpl.jena</groupId>
+    <artifactId>arq</artifactId>
+    <version>2.8.3</version>
+</dependency>
+
+</dependencies>
+		
+
 
 
 </project>
