--- a/pom.xml
+++ b/pom.xml
@@ -70,24 +70,31 @@
 
   
   <!-- https://mvnrepository.com/artifact/org.apache.jena/jena-arq -->
-<dependency>
+<!-- <dependency>
     <groupId>org.apache.jena</groupId>
     <artifactId>jena-arq</artifactId>
     <version>3.1.1</version>
-</dependency>
+</dependency> -->
 
-<dependency>
+<!-- <dependency>
         <groupId>org.aksw.jena-sparql-api</groupId>
         <artifactId>jena-sparql-api-core</artifactId>
         <version>3.0.1-1</version>
-    </dependency> 
+    </dependency>  -->
     
     <dependency>
     <groupId>com.hp.hpl.jena</groupId>
     <artifactId>arq</artifactId>
     <version>2.8.3</version>
+    <exclusions>
+    <exclusion>
+    <groupId>org.apache.lucene</groupId>
+    <artifactId>lucene-core</artifactId>
+     </exclusion>
+    </exclusions>
+    
 </dependency>
-
+ 
 </dependencies>
 		
 
