--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,31 @@
 		</dependency>
 
 		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+			<version>3.7.0</version>
+
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.lucene</groupId>
+					<artifactId>lucene-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.lucene</groupId>
+					<artifactId>lucene-queryparser</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.lucene</groupId>
+					<artifactId>lucene-queries</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.lucene</groupId>
+					<artifactId>lucene-analyzers-common</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
 			<groupId>org.elasticsearch.client</groupId>
 			<artifactId>transport</artifactId>
 			<version>5.2.1</version>
@@ -65,38 +90,31 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.7</version>
 		</dependency>
-		
-		
 
-  
-  <!-- https://mvnrepository.com/artifact/org.apache.jena/jena-arq -->
-<!-- <dependency>
-    <groupId>org.apache.jena</groupId>
-    <artifactId>jena-arq</artifactId>
-    <version>3.1.1</version>
-</dependency> -->
 
-<!-- <dependency>
-        <groupId>org.aksw.jena-sparql-api</groupId>
-        <artifactId>jena-sparql-api-core</artifactId>
-        <version>3.0.1-1</version>
-    </dependency>  -->
-    
-    <dependency>
-    <groupId>com.hp.hpl.jena</groupId>
-    <artifactId>arq</artifactId>
-    <version>2.8.3</version>
-    <exclusions>
-    <exclusion>
-    <groupId>org.apache.lucene</groupId>
-    <artifactId>lucene-core</artifactId>
-     </exclusion>
-    </exclusions>
-    
-</dependency>
- 
-</dependencies>
-		
+
+		<!-- https://mvnrepository.com/artifact/org.apache.jena/jena-arq -->
+		<!-- <dependency> <groupId>org.apache.jena</groupId> <artifactId>jena-arq</artifactId> 
+			<version>3.1.1</version> </dependency> -->
+
+		<!-- <dependency> <groupId>org.aksw.jena-sparql-api</groupId> <artifactId>jena-sparql-api-core</artifactId> 
+			<version>3.0.1-1</version> </dependency> -->
+
+		<dependency>
+			<groupId>com.hp.hpl.jena</groupId>
+			<artifactId>arq</artifactId>
+			<version>2.8.3</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.lucene</groupId>
+					<artifactId>lucene-core</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+
+	</dependencies>
+
 
 
 
