--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<artifactId>nouha</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
@@ -17,10 +18,67 @@
             </plugin>
         </plugins>
     </build>
+
     <name>nouha</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
+
+    <profiles>
+        <profile>
+            <id>buildIndex</id>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.6.0</version>
+                        <configuration>
+                            <executable>${java.home}/bin/java</executable>
+                            <arguments>
+                                <argument>-Xms256m</argument>
+                                <argument>-Xmx1g</argument>
+                                <argument>-XX:+UseCompressedOops</argument>
+                                <argument>-classpath</argument>
+                                <classpath/>
+                                <argument>ca.ualberta.cs.extractor.Wikiparser</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+
+        <profile>
+            <id>server</id>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.6.0</version>
+                        <configuration>
+                            <executable>${java.home}/bin/java</executable>
+                            <arguments>
+                                <argument>-Xms128m</argument>
+                                <argument>-Xmx2g</argument>
+                                <argument>-XX:+UseCompressedOops</argument>
+                                <argument>-classpath</argument>
+                                <classpath/>
+                                <argument>ca.ualberta.server.WikitablesServer</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.bluestemsoftware.open.maven.tparty</groupId>
